--- a/src/app/layout-pages/header-layout/header-layout.component.html
+++ b/src/app/layout-pages/header-layout/header-layout.component.html
@@ -9,6 +9,7 @@
   @if(isDropdownOpen){
     <div class="flex flex-col lg:flex-row">
       <button class="lg:hidden lg:bg-white border-2 lg:border-0 font-bold px-8 py-2 lg:mt-0 lg:mr-3 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/inicio/register-users']" >REGISTRARSE</button>
+      <button class="lg:hidden lg:bg-white border-2 lg:border-0 font-bold px-8 py-2 lg:mt-0 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/inicio/login-users']">INICIAR SESIÓN</button>
     </div>
   }
 
@@ -17,8 +18,8 @@
   <div class="flex flex-col lg:flex-row">
     <!-- Se ocultan en pantallas de modo teléfono (menores de 1024px) -->
     <button class="hidden lg:flex lg:bg-white border-2 lg:border-0 font-bold px-8 py-2 lg:mt-0 lg:mr-3 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/inicio/register-users']" >REGISTRARSE</button>
+    <button class="hidden lg:flex lg:bg-white border-2 lg:border-0 font-bold px-8 py-2 lg:mt-0 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/inicio/login-users']">INICIAR SESIÓN</button>
   </div>
 
 
 </nav>
-
