register-mechanics-fn

--- a/src/app/mechanic-view/mechanic-view.component.html
+++ b/src/app/mechanic-view/mechanic-view.component.html
@@ -8,7 +8,7 @@
 
   </div>
 
-  <div class="bg-blue-400lue w-full lg:w-4/5 mr-5 ml-5">
+  <div class="bg-blue-400lue w-full lg:w-4/5">
 
     <router-outlet />
 
