--- a/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
+++ b/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center h-screen -mt-8 -mb-8">
+<div class="flex justify-center items-center h-screen -mt-8 -mb-12 mr-5 ml-5">
   <div class="p-10 text-black lg:h-4/6 w-full lg:w-4/12" style="background: #D9D9D9">
     <h2 class="text-2xl mb-6">Servicios prestados del taller:</h2>
 
@@ -29,7 +29,7 @@
     </div>
 
 
-    <!-- Botón de editar -->
+    <!-- Botón de guardar -->
     <div class=" text-center mt-1">
       <button type="button" class="text-xl mt-5 bg-blue-500 font-semibold text-black px-10 py-3 rounded-lg" style="background: #F7941F" (click)="openModal()">Guardar</button>
 
@@ -47,12 +47,6 @@
     <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
       <h3 class="text-2xl mb-4 font-semibold text-center text-black">Los servicios fueron registrados correctamente!</h3>
       <img src="./assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
-
-
-      <!-- Campos de registro -->
-
-
-
 
       <!-- Botón de guardar -->
       <div class="flex items-center justify-center mr-24 ml-24">
