--- a/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
+++ b/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
@@ -11,6 +11,7 @@
     <div class="flex flex-col">
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/mechanic/workshop-info']" >INFORMACIÓN</button>
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/mechanic/workshop-services']">SERVICIOS</button>
+      <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/mechanic/workshop-mechanics']">MECANICOS</button>
 
     </div>
   }
