SCRUM-38 register-vehicle-fn

--- a/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
+++ b/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!--- Lista de vehiculos --->
-<div class="flex flex-col justify-center items-center mt-14 mb-10 lg:mb-32">
+<!--- Lista de mecanicos --->
+<div class="flex flex-col justify-center items-center mt-14 ">
 
   <!-- Opcion de registro lg-->
   <div class="mt-0 lg:mt-24 w-4/5 bg-gray-200 p-4">
