feature/service-integrate-backend

--- a/src/app/layout-pages/pages/verify-account/verify-account.component.html
+++ b/src/app/layout-pages/pages/verify-account/verify-account.component.html
@@ -3,7 +3,7 @@
   <div class="flex flex-row justify-between">
     <button class="bg-white font-bold px-3 py-1 rounded-lg lg:hidden" >☰</button>
 
-    <img src="./assets/img/LogoLA.png" alt="Logo" class="h-7 ml-4 lg:mt-2">
+    <img src="./assets/img/LogoLA.png" alt="Logo"  [routerLink]="['/inicio']"  class="h-7 ml-4 lg:mt-2">
   </div>
 
 </nav>
