--- a/src/app/client-view/pages/register-vehicles/register-vehicles.component.html
+++ b/src/app/client-view/pages/register-vehicles/register-vehicles.component.html
@@ -5,7 +5,9 @@
   <div class="mt-0 lg:mt-24 w-4/5 bg-gray-200 p-4">
     <div class="flex items-center justify-between mr-5 ml-5 lg:mr-24 lg:ml-24">
       <h2 class="lg:text-2xl text-lg mt-3 mb-3">Vehículos Registrados</h2>
-      <button type="button" class="lg:text-xl text-lg text-black rounded-xl px-5 lg:px-10 py-3 font-semibold inline-block" (click)="openModal()" style="background: #F7941F">Registrar</button>
+      <button type="button"
+        class="lg:text-xl text-lg text-black rounded-xl px-5 lg:px-10 py-3 font-semibold inline-block"
+        (click)="openModal()" style="background: #F7941F">Registrar</button>
     </div>
   </div>
 
@@ -14,24 +16,24 @@
   <div class="lg:block hidden mt-8  w-4/5 bg-white border-2 border-gray-400 text-center" style="height: 32pc">
     <table class="w-full">
       <thead>
-      <tr>
-        <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">PLACA</th>
-        <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MARCA</th>
-        <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MODELO</th>
-        <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">CATEGORIA</th>
-        <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">ACCION</th>
-      </tr>
+        <tr>
+          <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">PLACA</th>
+          <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MARCA</th>
+          <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MODELO</th>
+          <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">CATEGORIA</th>
+          <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">ACCION</th>
+        </tr>
       </thead>
       <tbody class="w-full">
-      <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage: 6, currentPage: p }">
-        <td class="font-semibold border-gray-400 py-4" style="width: 20%;">{{ vehicle.placa }}</td>
-        <td class="border-gray-400 py-4" style="width: 20%;">{{ vehicle.marca }}</td>
-        <td class="border-gray-400 py-4" style="width: 20%;">{{ vehicle.modelo }}</td>
-        <td class="border-gray-400 py-4" style="width: 20%;">{{ vehicle.categoria }}</td>
-        <td class="border-gray-400 py-4" style="width: 20%;">
-          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F">☰</button>
-        </td>
-      </tr>
+        <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage: 6, currentPage: p }">
+          <td class="font-semibold border-gray-400 py-4" style="width: 20%;">{{ vehicle.placa }}</td>
+          <td class="border-gray-400 py-4" style="width: 20%;">{{ vehicle.marca }}</td>
+          <td class="border-gray-400 py-4" style="width: 20%;">{{ vehicle.modelo }}</td>
+          <td class="border-gray-400 py-4" style="width: 20%;">{{ vehicle.categoria }}</td>
+          <td class="border-gray-400 py-4" style="width: 20%;">
+            <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F">☰</button>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -41,35 +43,31 @@
   <div class="lg:hidden mt-8  w-4/5 bg-white border-2 border-gray-400 text-center" style="height: 32pc">
     <table class="w-full">
       <thead>
-      <tr>
-        <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">PLACA</th>
-        <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MARCA</th>
-        <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MODELO</th>
-        <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">CATEGORIA</th>
-        <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">ACCION</th>
-      </tr>
+        <tr>
+          <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">PLACA</th>
+          <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MARCA</th>
+          <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">MODELO</th>
+          <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">CATEGORIA</th>
+          <th class="text-xs font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">ACCION</th>
+        </tr>
       </thead>
       <tbody class="w-full">
-      <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage: 7, currentPage: p }">
-        <td class="text-xs font-semibold border-gray-400 py-4" style="width: 20%;">{{ vehicle.placa }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.marca }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.modelo }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.categoria }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">
-          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F">☰</button>
-        </td>
-      </tr>
+        <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage: 7, currentPage: p }">
+          <td class="text-xs font-semibold border-gray-400 py-4" style="width: 20%;">{{ vehicle.placa }}</td>
+          <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.marca }}</td>
+          <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.modelo }}</td>
+          <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.categoria }}</td>
+          <td class="text-xs border-gray-400 py-4" style="width: 20%;">
+            <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F">☰</button>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
 
   <!-- paginacion lg-->
   <div class="flex justify-center -mt-14 mb-16 lg:mb-36">
-    <pagination-controls
-      (pageChange)="p = $event"
-      previousLabel=""
-      nextLabel=""
-    ></pagination-controls>
+    <pagination-controls (pageChange)="p = $event" previousLabel="" nextLabel=""></pagination-controls>
   </div>
 
 
@@ -80,40 +78,51 @@
 
 <div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center">
 
-<div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
-<h3 class="text-2xl mb-4 font-semibold text-center " style="color: #d82733">Registrar mi vehículo</h3>
-<p class="text-xl mb-6 font-semibold text-center">Información del vehículo</p>
+  <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
+    <h3 class="text-2xl mb-4 font-semibold text-center " style="color: #d82733">Registrar mi vehículo</h3>
+    <p class="text-xl mb-6 font-semibold text-center">Información del vehículo</p>
 
-<!-- Campos de registro -->
+    <!-- Campos de registro -->
 
-<div class="mb-4">
-<input #placaInput type="text" placeholder="Placa" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4  mb-2 lg:mb-0" (input)="onInputChange($event)">
-</div>
+    <div class="mb-4">
+      <input #placaInput type="text" placeholder="Placa"
+        class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4  mb-2 lg:mb-0"
+        (input)="onInputChange($event)">
+    </div>
 
-<select class="text-lg w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 mb-6">
-<option value="" disabled selected>Seleccionar Marca</option>
-<option *ngFor="let marca of marcas" [value]="marca">{{ marca }}</option>
-</select>
+    <select
+      class="text-lg w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 mb-6"
+      (ngModelChange)="onMarcaSelect($event)" [(ngModel)]="selectedMarcaId">
+      <option [ngValue]="null" disabled selected>Seleccionar Marca</option>
+      @for (marca of marcas; track $index) {
+      <option [value]="marca.id">{{ marca.nombre }}</option>
+      }
+    </select>
 
-<select class="text-lg w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 mb-6">
-<option value="" disabled selected>Seleccionar Modelo</option>
-<option *ngFor="let modelo of modelos" [value]="modelo">{{ modelo }}</option>
-</select>
+    <select
+      class="text-lg w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 mb-6"
+      (ngModelChange)="onModeloSelect($event)" [(ngModel)]="selectedModeloId">
+      <option [ngValue]="null" disabled selected>Seleccionar Modelo</option>
+      @for (modelo of modelos; track $index) {
+      <option [value]="modelo.id">{{ modelo.nombre }}</option>
+      }
+    </select>
 
-<select class="text-lg w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 mb-6">
-<option value="" disabled selected>Seleccionar Categoría</option>
-<option *ngFor="let categoria of categorias" [value]="categoria">{{ categoria }}</option>
-</select>
+    <select
+      class="text-lg w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 mb-6"
+      (ngModelChange)="onCategoriaSelect($event)" [(ngModel)]="selectedCategoria">
+      <option [ngValue]="null" disabled selected>Seleccionar Categoría</option>
+      <option *ngFor="let categoria of categorias" [value]="categoria">{{ categoria }}</option>
+    </select>
 
 
 
 
-<!-- Botón de guardar -->
-<div class="flex items-center justify-center mr-24 ml-24">
-<button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4" style="background: #F7941F" (click)="saveVehicle()">Guardar</button>
-</div>
-</div>
+    <!-- Botón de guardar -->
+    <div class="flex items-center justify-center mr-24 ml-24">
+      <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4"
+        style="background: #F7941F" (click)="saveVehicle()">Guardar</button>
+    </div>
+  </div>
 </div>
 }
-
-
