--- a/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
+++ b/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
@@ -9,10 +9,12 @@
       <div class="mb-4">
         <h3 class="flex text-lg mb-2 font-semibold">Mantenimiento</h3>
         <div class="flex flex-col">
-          <label *ngFor="let accion of accionesMantenimiento" class="flex items-center">
-            <input type="checkbox" class="mr-2">
-            {{ accion }}
-          </label>
+          @for (servicio of accionesMantenimiento; track $index) {
+          <label  class="flex items-center">
+              <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
+              {{ servicio.nombre }}
+            </label>
+          }
         </div>
       </div>
 
@@ -20,10 +22,12 @@
       <div class="mb-4">
         <h3 class="flex text-lg mb-2 font-semibold">Reparación</h3>
         <div class="flex flex-col">
-          <label *ngFor="let accion of accionesReparacion" class="flex items-center">
-            <input type="checkbox" class="mr-2">
-            {{ accion }}
-          </label>
+          @for (servicio of accionesReparacion; track $index) {
+            <label class="flex items-center">
+              <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
+              {{ servicio.nombre }}
+            </label>
+          }
         </div>
       </div>
     </div>
@@ -55,7 +59,3 @@
     </div>
   </div>
 }
-
-
-
-
