--- a/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
+++ b/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!--- Lista de mecanicos --->
-<div class="flex flex-col justify-center items-center mt-14 ">
+<div class="flex flex-col justify-center items-center mt-14 mb-1">
 
   <!-- Opcion de registro lg-->
   <div class="mt-0 lg:mt-24 w-4/5 bg-gray-200 p-4">
@@ -48,7 +48,7 @@
 
 
   <!-- TABLA xs-->
-  <div class="lg:hidden mt-8  w-4/5 bg-white border-2 border-gray-400 text-center" style="height: 32pc">
+  <div class="lg:hidden mt-8 w-4/5 bg-white border-2 border-gray-400 text-center" style="height: 32pc">
     <table class="w-full">
       <thead>
       <tr>
@@ -77,6 +77,7 @@
       nextLabel=""
     ></pagination-controls>
   </div>
+
 
 </div>
 
