SCRUM-27 order-list-fn

--- a/src/app/mechanic-view/sidebar-mechanic/sidebar-mechanic.component.html
+++ b/src/app/mechanic-view/sidebar-mechanic/sidebar-mechanic.component.html
@@ -35,7 +35,7 @@
       <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12" [routerLink]="['/workshop/create-order']">
         Nueva Orden
       </button>
-      <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12 rounded-b-3xl" [routerLink]="['/workshop/workshop-info']">
+      <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12 rounded-b-3xl" [routerLink]="['/workshop/order-list']">
         Lista de ordenes
       </button>
     </div>
