--- a/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
+++ b/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
@@ -10,7 +10,7 @@
   @if(isDropdownOpenxs){
     <div class="flex flex-col">
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/create-order']" >NUEVA ORDEN</button>
-      <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/workshop-info']" >LISTA DE ORDENES</button>
+      <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/order-list']" >LISTA DE ORDENES</button>
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/workshop-info']" >INFORMACIÓN</button>
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/workshop-services']">SERVICIOS</button>
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/workshop-mechanics']">MECANICOS</button>
