--- a/src/app/mechanic-view/pages/create-order/create-order.component.html
+++ b/src/app/mechanic-view/pages/create-order/create-order.component.html
@@ -1,7 +1,8 @@
 <!--- Lista de vehiculos --->
 <div class="flex flex-col justify-center items-center mt-10">
 
-  <img src="./assets/img/LogoEmpresaR.png" alt="Logo" class="h-32" [routerLink]="['/workshop/workshop-info']" style="cursor: pointer;">
+  <img src="./assets/img/LogoEmpresaR.png" alt="Logo" class="h-32" [routerLink]="['/workshop/workshop-info']"
+    style="cursor: pointer;">
 
 
   <!-- Opcion de registro lg-->
@@ -14,8 +15,12 @@
     <div class="flex lg:flex-col flex-col  justify-between mr-5 ml-5 lg:mr-24 lg:ml-24">
 
       <div class="flex lg:flex-row flex-col lg:w-96 lg:mx-auto">
-        <input #placaInput type="text" placeholder="Placa" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4  mb-2 lg:mb-0" (input)="onInputChange($event)">
-        <button type="button" class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg:mt-0" style="background: #F7941F">Buscar</button>
+        <input #placaInput type="text" placeholder="Placa"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4  mb-2 lg:mb-0"
+          (input)="onInputChange($event)">
+        <button type="button"
+          class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg:mt-0"
+          style="background: #F7941F" (click)="buscarPorPlaca()">Buscar</button>
       </div>
 
       <div class="flex ">
@@ -25,9 +30,15 @@
       <!-- Opcion de registro del clientiño-->
       <div class="flex lg:flex-row flex-col">
 
-        <input type="text" placeholder="Nombre" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-        <input type="text" placeholder="Direccion" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-        <input type="text" placeholder="Número de contacto" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mb-2 lg:mb-0">
+        <input type="text" placeholder="Nombre"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
+          [(ngModel)]="cliente.nombreCliente">
+        <input type="text" placeholder="Direccion"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
+          [(ngModel)]="cliente.direccion">
+        <input type="text" placeholder="Número de contacto"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mb-2 lg:mb-0"
+          [(ngModel)]="cliente.telefono">
       </div>
 
       <div class="flex">
@@ -36,10 +47,18 @@
 
       <!-- Opcion de registro del vehiCULO-->
       <div class="flex lg:flex-row flex-col">
-        <input type="text" placeholder="Placa" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-        <input type="text" placeholder="Modelo" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-        <input type="text" placeholder="Marca" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-        <input type="text" placeholder="Categoría" class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mb-2 lg:mb-0">
+        <input type="text" placeholder="Placa"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
+          [(ngModel)]="vehiculo.placa">
+        <input type="text" placeholder="Modelo"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
+          [(ngModel)]="vehiculo.marca">
+        <input type="text" placeholder="Marca"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
+          [(ngModel)]="vehiculo.modelo">
+        <input type="text" placeholder="Categoría"
+          class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mb-2 lg:mb-0"
+          [(ngModel)]="vehiculo.categoria">
       </div>
 
       <div class="flex">
@@ -51,30 +70,48 @@
 
       <div class="bg-white p-6 rounded-lg text-black overflow-y-auto mb-5" style="height: 250px;">
         <div class="flex lg:flex-row flex-col mb-3" *ngFor="let item of items; let i = index" [id]="'item-' + i">
-          <select class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-            <option disabled selected>Tipo de servicio</option>
-            <option *ngFor="let tservicio of tipoServicio">{{ tservicio }}</option>
+          <select
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
+            [(ngModel)]="selectedTipoServicio" (ngModelChange)="onTypeOfService($event)">
+            <option disabled [ngValue]="null" disabled selected>Tipo de servicio</option>
+            <option *ngFor="let tservicio of tipoServicio" [ngValue]="tservicio"
+              [selected]="tservicio === selectedTipoServicio">{{ tservicio }}</option>
           </select>
 
-          <select class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-            <option disabled selected>Servicio</option>
-            <option *ngFor="let servicio of Servicio">{{ servicio }}</option>
+          <select
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
+            [(ngModel)]="selectedServiceId" (ngModelChange)="getMechanicsByService(selectedServiceId)">
+            <option disabled [ngValue]="0" disabled selected>Servicio</option>
+            @if (selectedTipoServicio === 'MANTENIMIENTO') {
+            <option *ngFor="let servicio of serviciosMantenimiento" [ngValue]="servicio.id">{{ servicio.nombre }}
+            </option>
+            }
+            @else if (selectedTipoServicio == 'REPARACION') {
+            <option *ngFor="let servicio of serviciosReparacion" [ngValue]="servicio.id">{{ servicio.nombre }}</option>
+            }
           </select>
 
-          <select class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
-            <option disabled selected>Macanico</option>
-            <option *ngFor="let mc of listaMecanico">{{ mc }}</option>
+          <select
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0" [(ngModel)]="selectedMecanicId" (click)="selectMechanic(selectedMecanicId)">
+            <option disabled [ngValue]="0" disabled selected>Mecanico</option>
+            <option *ngFor="let mc of mecanicos" [ngValue]="mc.id">{{ mc.nombre }}</option>
           </select>
 
           <div class="text-xl w-full">
-            <button type="button" class="text-xl w-full text-black rounded-xl px-3 py-2 font-semibold inline-block" style="background: #F7941F; white-space: nowrap;" (click)="agregarItem()" *ngIf="i === items.length - 1">Agregar Servicio</button>
-            <button type="button" class="text-xl w-full text-black rounded-xl px-3 py-2 font-semibold inline-block" style="background: #F7941F; white-space: nowrap;" (click)="eliminarItem(i)" *ngIf="i !== items.length - 1">Quitar</button>
+            <button type="button" class="text-xl w-full text-black rounded-xl px-3 py-2 font-semibold inline-block"
+              style="background: #F7941F; white-space: nowrap;" (click)="agregarItem()"
+              *ngIf="i === items.length - 1">Agregar Servicio</button>
+            <button type="button" class="text-xl w-full text-black rounded-xl px-3 py-2 font-semibold inline-block"
+              style="background: #F7941F; white-space: nowrap;" (click)="eliminarItem(i)"
+              *ngIf="i !== items.length - 1">Quitar</button>
           </div>
         </div>
       </div>
 
       <div class="mx-auto mb-2">
-        <button type="button" class="text-xl text-black rounded-xl px-8 py-3 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg:mt-0" (click)="openModal()" style="background: #F7941F">Registrar</button>
+        <button type="button"
+          class="text-xl text-black rounded-xl px-8 py-3 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg:mt-0"
+          (click)="openModal()" style="background: #F7941F">Registrar</button>
       </div>
 
 
@@ -87,27 +124,17 @@
 
 @if (showModal){
 
-  <div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center">
+<div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center">
 
-    <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
-      <h3 class="text-2xl mb-4 font-semibold text-center text-black">La orden fue registrada correctamente!</h3>
-      <img src="./assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
+  <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
+    <h3 class="text-2xl mb-4 font-semibold text-center text-black">La orden fue registrada correctamente!</h3>
+    <img src="./assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
 
-      <!-- Botón de guardar -->
-      <div class="flex items-center justify-center mr-24 ml-24">
-        <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4" style="background: #F7941F"  (click)="closeModal()">Aceptar</button>
-      </div>
+    <!-- Botón de guardar -->
+    <div class="flex items-center justify-center mr-24 ml-24">
+      <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4"
+        style="background: #F7941F" (click)="closeModal()">Aceptar</button>
     </div>
   </div>
+</div>
 }
-
-
-
-
-
-
-
-
-
-
-
