--- a/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
+++ b/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
@@ -4,7 +4,7 @@
   <div class="flex flex-row justify-between">
     <button class="bg-white font-bold px-3 py-1 rounded-lg" (click)="toggleDropdownxs()">☰</button>
 
-    <img src="./assets/img/LogoLA.png" alt="Logo" class="h-7 ml-4" [routerLink]="['/workshop']" style="cursor: pointer;">
+    <img src="../../../assets/img/LogoLA.png" alt="Logo" class="h-7 ml-4" [routerLink]="['/workshop']" style="cursor: pointer;">
   </div>
 
   @if(isDropdownOpenxs){
