--- a/src/app/mechanic-view/pages/create-order/create-order.component.html
+++ b/src/app/mechanic-view/pages/create-order/create-order.component.html
@@ -1,8 +1,8 @@
 <!--- Lista de vehiculos --->
-<div class="flex flex-col justify-center items-center mt-10">
+<div class="flex flex-col justify-center items-center mt-5 mb-2.5">
 
-  <img src="./assets/img/LogoEmpresaR.png" alt="Logo" class="h-32" [routerLink]="['/workshop/workshop-info']"
-    style="cursor: pointer;">
+  <img src="../../../../assets/img/LogoEmpresaR.png" alt="Logo" class="h-32" [routerLink]="['/workshop/workshop-info']"
+       style="cursor: pointer;">
 
 
   <!-- Opcion de registro lg-->
@@ -128,7 +128,7 @@
 
   <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
     <h3 class="text-2xl mb-4 font-semibold text-center text-black">La orden fue registrada correctamente!</h3>
-    <img src="./assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
+    <img src="../../../../assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
 
     <!-- Botón de guardar -->
     <div class="flex items-center justify-center mr-24 ml-24">
