--- a/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
+++ b/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
@@ -150,7 +150,7 @@
 
       <!-- Botón de guardar -->
       <div class="flex items-center justify-center mr-24 ml-24">
-        <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4" style="background: #F7941F" (click)="createMechanic()">Guardar</button>
+        <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-6 -mb-4" style="background: #F7941F" (click)="createMechanic()">Guardar</button>
       </div>
     </div>
   </div>
@@ -162,7 +162,7 @@
 
     <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
       <h3 class="text-2xl mb-4 font-semibold text-center text-black">El mecanico fue registrado correctamente!</h3>
-      <img src="./assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
+      <img src="../../../../assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
 
       <!-- Botón de guardar -->
       <div class="flex items-center justify-center mr-24 ml-24">
