--- a/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
+++ b/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
@@ -53,7 +53,7 @@
 
     <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
       <h3 class="text-2xl mb-4 font-semibold text-center text-black">Los servicios fueron registrados correctamente!</h3>
-      <img src="./assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
+      <img src="../../../../assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
 
       <!-- Botón de guardar -->
       <div class="flex items-center justify-center mr-24 ml-24">
