--- a/src/app/mechanic-view/sidebar-mechanic/sidebar-mechanic.component.html
+++ b/src/app/mechanic-view/sidebar-mechanic/sidebar-mechanic.component.html
@@ -1,6 +1,6 @@
 
 <!-- MENU PARA LG -->
-<img src="./assets/img/LogoLtrans.png" alt="Logo" class="h-7 mt-10" [routerLink]="['/workshop']" style="cursor: pointer">
+<img src="../../../assets/img/LogoLtrans.png" alt="Logo" class="h-7 mt-10" [routerLink]="['/workshop']" style="cursor: pointer">
 
 
 <!-- Primer conjunto de botones -->
