--- a/src/app/client-view/menu-client/menu-client.component.html
+++ b/src/app/client-view/menu-client/menu-client.component.html
@@ -9,6 +9,7 @@
 
   @if(isDropdownOpenxs){
   <div class="flex flex-col">
+    <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/client/order-list-client']" >LISTA DE ORDENES</button>
     <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/client/edit-info']" >INFORMACIÓN</button>
     <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/client/register-vehicles']">VEHICULOS</button>
 
