--- a/src/app/client-view/sidebar-client/sidebar-client.component.html
+++ b/src/app/client-view/sidebar-client/sidebar-client.component.html
@@ -7,7 +7,7 @@
   @if (showDropdown) {
   <button class="justify-between text-xl flex w-full bg-white hover:bg-gray-200 text-black font-semibold py-2 px-12 rounded-t-3xl"
           (click)="toggleDropdown()">
-    Mi Perfil
+    Orden de Trabajo
     @if (showDropdown) {
   <span >&#9650;</span>
   } @else {
@@ -18,7 +18,7 @@
   @if (!showDropdown) {
   <button class="justify-between text-xl flex w-full bg-white hover:bg-gray-200 text-black font-semibold py-2 px-12 rounded-3xl"
           (click)="toggleDropdown()">
-    Mi Perfil
+    Orden de Trabajo
     @if (showDropdown) {
   <span>&#9650;</span>
   } @else {
@@ -31,12 +31,48 @@
   @if (showDropdown) {
   <div class="top-full left-0 bg-white z-10 w-72 border-t-2 rounded-b-3xl">
     <!-- Botones del desplegable -->
-    <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12" [routerLink]="['/client/edit-info']">
-      Información
-    </button>
-    <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12 rounded-b-3xl" [routerLink]="['/client/register-vehicles']">
-      Vehiculos
+    <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12 rounded-b-3xl" [routerLink]="['/client/order-list-client']">
+      Lista de ordenes
     </button>
   </div>
+  }
+</div>
+
+<!-- Segundo conjunto de botones -->
+<div class="top-full left-0 bg-red z-10 w-72 mb-5  rounded-3xl justify-between">
+  @if (showDropdown2) {
+    <button class="justify-between text-xl flex w-full bg-white hover:bg-gray-200 text-black font-semibold py-2 px-12 rounded-t-3xl"
+            (click)="toggleDropdown2()">
+      Mi Perfil
+      @if (showDropdown2) {
+        <span >&#9650;</span>
+      } @else {
+        <span>&#9660;</span>
+      }
+    </button>
+  }
+  @if (!showDropdown2) {
+    <button class="justify-between text-xl flex w-full bg-white hover:bg-gray-200 text-black font-semibold py-2 px-12 rounded-3xl"
+            (click)="toggleDropdown2()">
+      Mi Perfil
+      @if (showDropdown2) {
+        <span>&#9650;</span>
+      } @else {
+        <span>&#9660;</span>
+      }
+    </button>
+  }
+
+
+  @if (showDropdown2) {
+    <div class="top-full left-0 bg-white z-10 w-72 border-t-2 rounded-b-3xl">
+      <!-- Botones del desplegable -->
+      <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12" [routerLink]="['/client/edit-info']">
+        Información
+      </button>
+      <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12 rounded-b-3xl" [routerLink]="['/client/register-vehicles']">
+        Vehiculos
+      </button>
+    </div>
   }
 </div>
