--- a/src/app/order-progress/pages/client-progress/client-progress.component.html
+++ b/src/app/order-progress/pages/client-progress/client-progress.component.html
@@ -1,4 +1,6 @@
-<div class="flex lg:flex-row flex-col lg:mt-28 lg:mb-32 mb-14">
+
+
+<div class="flex lg:flex-row flex-col lg:mt-28 lg:mb-32 mb-14" *ngFor="let order of orders">
 
   <!--- Primera columna --->
   <div class="flex flex-col w-full lg:items-center lg:w-1/2 lg:ml-14 lg:-mr-32">
@@ -6,18 +8,18 @@
     <div class="flex flex-col border border-gray-300 mt-5 p-8 mb-4 justify-center mr-7 ml-7 lg:w-1/2" style="background: #D9D9D9">
       <h2 class="font-bold text-2xl mb-2">Detalle de la Orden de Trabajo</h2>
       <p class="font-bold text-xl mb-2">Información del taller</p>
-      <p class="text-lg mt-2">Nombre:{{ datosOrden.nombre }}</p>
-      <p class="text-lg mt-2">Dirección: {{ datosOrden.direccion }}</p>
-      <p class="text-lg mt-2">Teléfono/Celular: {{ datosOrden.telefono }}</p>
-      <p class=" text-xl mt-4"><strong>Código de Orden:</strong> {{ datosOrden.codigo }}</p>
+      <p class="text-lg mt-2">Nombre: {{ order.nombre }}</p>
+      <p class="text-lg mt-2">Dirección: {{ order.direccion }}</p>
+      <p class="text-lg mt-2">Teléfono/Celular: {{ order.telefono }}</p>
+      <p class="text-lg mt-2"><strong>Código de Orden: {{ order.codigo }}</strong></p>
     </div>
 
-    <div class="flex flex-col lg:mt-10 mr-7 ml-7 lg:w-1/2">
+    <div class="flex flex-col lg:mt-10 mr-7 ml-7 lg:w-1/2" >
       <div class="bg-yellow-300 p-4" style="background: #FED338">
         <h2 class="font-bold text-lg">Bandeja de Chat</h2>
       </div>
-      <div class="p-4 flex items-center justify-between" style="background: #D9D9D9;">
-        <p>{{ datosOrden.servicio }}</p>
+      <div class="p-4 flex items-center justify-between" style="background: #D9D9D9;" *ngFor="let servicio of order.servicios">
+        <p>{{ servicio.servicio }}</p>
         <button (click)="openChat()">
           <img src="./assets/img/iconoChat.png" alt="Logo" class="h-6 mr-1" style="cursor: pointer;">
 
@@ -27,26 +29,12 @@
 
   </div>
 
-  <!--- segunda columna --->
   <div class="flex flex-col w-full lg:w-1/2 mt-2 lg:mr-48 p-5">
-    <div class="items-center text-center">
-      <h2 class="font-bold text-2xl lg:mr-10 mb-2">Monitoreo </h2>
-    </div>
-    <div class="items-start lg:ml-0 ml-5">
-      <p class="text-lg "><strong>Servicio: </strong>{{ datosOrden.servicio }}</p>
-      <p class="text-lg "><strong>Mecánico: </strong>{{ datosOrden.mecanico }}</p>
-      <div class="flex">
-        <p class="text-lg"><strong>Estado:</strong>&nbsp;</p>
-        <p class="text-lg {{ getColorClass(datosOrden.estado) }}">{{ datosOrden.estado }}</p>
-      </div>
-    </div>
-
-    <app-progress-bar />
+    <app-multi-progress-bar />
 
   </div>
 
 
-</div>
 
 
 
